--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/SQL1
+spring.datasource.url=jdbc:mysql://localhost:3306/SQL1?useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=Martin
 spring.datasource.password=Spilak
